--- a/src/popup.html
+++ b/src/popup.html
@@ -5,7 +5,7 @@
     <body>
         <main>
             <label>
-                Disable Sidepanel
+                Hide Sidebar
                 <input type="checkbox" id="checkbox" />
             </label>
             <script src="popup.js"></script>
